Better tracking of auth state, added possibility to sign off and reauth
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@164 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/locale/en-US/fireflix.dtd
+++ b/locale/en-US/fireflix.dtd
@@ -16,10 +16,12 @@
 
 <!ENTITY panel.auth_info "Authorization info">
 <!ENTITY panel.no_auth_info "No auth info available">
-<!ENTITY panel.auth_button "Authorize">
-<!ENTITY panel.auth_complete_button "Authorization complete">
-<!ENTITY panel.flickr_button.label "Flickr">
-<!ENTITY panel.flickr_button.tip "Open Flickr in new tab">
+
+<!ENTITY panel.auth.auth.label "Authorize">
+<!ENTITY panel.auth.done.label "Authorization complete">
+<!ENTITY panel.auth.flickr.label "Flickr">
+<!ENTITY panel.auth.flickr.tip "Open Flickr in new tab">
+<!ENTITY panel.auth.unauth.label "Sign off">
 
 <!ENTITY panel.tabs.search "Search" >
 <!ENTITY panel.tabs.sets "Sets" >
