--- a/locale/en-US/fireflix.properties
+++ b/locale/en-US/fireflix.properties
@@ -9,3 +9,5 @@ urltype__=Medium (fits in 500x500)
 urltype_b=Large (fits in 1024x1024)
 urltype_o=Original image
 urltype_p=Flickr photo URL
+
+search_page=Page %S of %S
