summarized absence of important changes in NEWS
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@180 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
  ()
-  - a lot of code cleanup and UI cosmetics
+  - ability to paginate through search results
+  - a lot of code cleanup and UI polishing
 0.0 (September 26th, 2006)
   - Initial release
