summarized changes and bumped version
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@190 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ ()
+  - Fixed HTML generation code
+  - Fixed a mistyped flickr url so that the 'Flickr' button works now
 0.0.1 (October 3rd, 2006)
   - Added ability to paginate through search results
   - Fixed packaging bug that omitted packaging license dialog
