added brief help file
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@191 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
  ()
+  - Added brief help file
   - Fixed HTML generation code
   - Fixed a mistyped flickr url so that the 'Flickr' button works now
 0.0.1 (October 3rd, 2006)
