--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
- ()
+0.0.2 (October 17th, 2006)
   - Added brief help file
   - Fixed HTML generation code
   - Fixed a mistyped flickr url so that the 'Flickr' button works now
