--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.0.4 ()
+  - Added the word 'sidebar' to the extension name so that you don't have to look hard for it
+  - UI polishing
+  - code cosmetics
 0.0.3 (November 6th, 2006)
   - Firefox 2.0 compatibility
 0.0.2 (October 17th, 2006)
