removing linebreaks from generated html
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@217 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/locale/en-US/fireflix.dtd
+++ b/locale/en-US/fireflix.dtd
@@ -73,6 +73,7 @@
 
 <!ENTITY generated.title "Fireflix: Generated content">
 <!ENTITY generated.copy "copy">
+<!ENTITY generated.nolf "remove linebreaks">
 
 <!ENTITY browser.sidebar.label "Fireflix">
 <!ENTITY browser.sidebar.title "Fireflix">
