--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 0.0.4 ()
+  - Added button to remove linebreaks from generated HTML
   - Added the word 'sidebar' to the extension name so that you don't have to look hard for it
-  - UI polishing
+  - UI polishing, including making it more boring
   - code cosmetics
 0.0.3 (November 6th, 2006)
   - Firefox 2.0 compatibility
