--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0.0.4 ()
+0.0.4 (November 13th, 2006)
   - Added button to remove linebreaks from generated HTML
   - Added the word 'sidebar' to the extension name so that you don't have to look hard for it
   - UI polishing, including making it more boring
