--- a/locale/en-US/fireflix.dtd
+++ b/locale/en-US/fireflix.dtd
@@ -77,6 +77,7 @@
 
 <!ENTITY browser.sidebar.label "Fireflix">
 <!ENTITY browser.sidebar.title "Fireflix">
+<!ENTITY browser.sidebar.tooltip "Fireflix">
 
 <!ENTITY photosetprops.title "Photoset properties">
 <!ENTITY photosetprops.set_title.label "Photoset title:">
