Building HTML for photos selection in sets browser
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@231 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/locale/en-US/fireflix.dtd
+++ b/locale/en-US/fireflix.dtd
@@ -55,6 +55,8 @@
 <!ENTITY panel.setphotos.upload.label "Uploaded">
 <!ENTITY panel.setphotos.upload.tip "When the picure was uploaded">
 
+<!ENTITY panel.setphotos.generate_html "Generate HTML">
+
 <!ENTITY panel.tagslist.tag.label "Tag">
 
 <!ENTITY panel.uploadlist.file.label "File name">
