--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,10 @@
-0.0.5 ()
+0.0.5 (November 17th, 2006)
   - Added toolbar button
+  - Generating HTML for photos selection in sets browser
   - Enter or double click on photo in set now opens photo in flickr
   - Double click on photoset opens photoset in flickr
+  - Hiding completely photo properties in sets browser when no photo
+  selected
 0.0.4 (November 13th, 2006)
   - Added button to remove linebreaks from generated HTML
   - Added the word 'sidebar' to the extension name so that you don't have to look hard for it
