--- a/locale/en-US/fireflix.dtd
+++ b/locale/en-US/fireflix.dtd
@@ -14,6 +14,9 @@
 
 <!-- Sidebar -->
 
+<!ENTITY sidekey.key "X">
+<!ENTITY sidekey.modifiers "control shift">
+
 <!ENTITY panel.auth_info "Authorization info">
 <!ENTITY panel.no_auth_info "No auth info available">
 
