Setting photo privacy before uploading
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@240 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/locale/en-US/fireflix.dtd
+++ b/locale/en-US/fireflix.dtd
@@ -69,6 +69,9 @@
 <!ENTITY panel.upload_props.filename.label "File:">
 <!ENTITY panel.upload_props.title.label "Title:">
 <!ENTITY panel.upload_props.tags.label "Tags:">
+<!ENTITY panel.upload_props.is_public "Public">
+<!ENTITY panel.upload_props.is_friend "Friends">
+<!ENTITY panel.upload_props.is_family "Family">
 
 <!ENTITY panel.uploads.upload.label "Upload">
 <!ENTITY panel.uploads.clear.label "Clear">
