added "what's new?" link to help file and prepared for release
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@243 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,9 @@
-0.0.6 ()
+0.0.6 (December 18th, 2006)
   - Added ability to edit future photo privacy settings before uploading
   - Show reasons for failed uploads and make uploaded files properties visible after upload is completed (readonly, though).
   - Added shortcut key for opening fireflix: Ctrl+Shift+X (not configurable, yet)
   - doubleclicking files in uploads tab
+  - "What's new?" link in help
 0.0.5 (November 17th, 2006)
   - Added toolbar button
   - Generating HTML for photos selection in sets browser
