--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+0.0.6.1 (December 20th, 2006)
+  - Firefox 2.0.0.* compatibility release
 0.0.6 (December 18th, 2006)
   - Added ability to edit future photo privacy settings before uploading
   - Show reasons for failed uploads and make uploaded files properties visible after upload is completed (readonly, though).
