--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+0.0.6.2 (June 19th, 2008)
+  - Firefox 3.0.* compatibility release
 0.0.6.1 (December 20th, 2006)
   - Firefox 2.0.0.* compatibility release
 0.0.6 (December 18th, 2006)
