--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+0.0.6.7 (August 28th, 2011)
+  - Compatibility update for the recent pack of foxes.
 0.0.6.3 (August 7th, 2009)
   - Firefox 3.5 compatibility release
 0.0.6.2 (June 19th, 2008)
